--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     ]
   },
   "require": {
-    "php": ">=5.6.0"
+    "php": ">=5.6.0",
+    "topthink/framework": "5.1.*",
+    "firebase/php-jwt": "^5.0"
   },
   "extra": {
     "think-config": {
