--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
   },
   "require": {
     "php": ">=5.6.0",
-    "topthink/framework": "5.1.*",
-    "firebase/php-jwt": "^5.0"
+    "firebase/php-jwt": "^5.*"
   },
   "extra": {
     "think-config": {
