--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require": {
     "php": ">=5.6.0",
-    "firebase/php-jwt": "^5.*"
+    "firebase/php-jwt": "^5.2"
   },
   "extra": {
     "think-config": {
